--- a/src/frontend/estoque_da_vovo/src/components/Btn/Btn.css
+++ b/src/frontend/estoque_da_vovo/src/components/Btn/Btn.css
@@ -1,12 +1,13 @@
 .button {
     color: white !important;
-    background-color: #f0bbc6!important;
-    border: solid 1px #eca4b5 !important;
+    background-color: var(--btn-background)!important;
+    border: solid 1px var(--btn-secondary-color) !important;
     font-weight: 500 !important;
-    transition: background-color 0.8s !important;
+    transition: var(--btn-transition) !important;
     border-radius: 10px !important;
+    box-shadow: 0px 0px 5px rgb(0, 0, 0,0.2);
 }
 
 .button:hover{
-    background-color: #eca4b5!important;
+    background-color: var(--btn-secondary-color)!important;
 }
