Update Components, Pages Estoque/Doadores, Router,Styles

--- a/src/frontend/estoque_da_vovo/src/App.css
+++ b/src/frontend/estoque_da_vovo/src/App.css
@@ -3,7 +3,8 @@
     background-color: #F2EDF3;
 }
 
-.dropdown-toggle::after {
-    display:none !important;
+/*Isso evita do scroll da tabela não aparecer*/
+.content-area{
+    overflow-x: hidden;
 }
 
