--- a/src/frontend/estoque_da_vovo/src/pages/NovoProduto/FormProduto/FormProduto.css
+++ b/src/frontend/estoque_da_vovo/src/pages/NovoProduto/FormProduto/FormProduto.css
@@ -1,17 +1,24 @@
 .form-produto {
-    padding: 5px;
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 32px 10px;
     font-weight: 700;
-    color: var(--primary-color);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+
+    label {
+        color: var(--primary-color);
+    }
 
     input,
     select {
-        border: solid 1px var(--secondary-color-1);
+        border: solid 2px var(--secondary-color-1);
         border-radius: 10px;
+        box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
     }
+
     input::placeholder {
         color: #b1b1b1;
     }
-
 
     .input-group button {
         background-color: var(--btn-background);
@@ -19,7 +26,8 @@
         border: solid 1px var(--secondary-color-1);
         transition: var(--btn-transition);
     }
-    .input-group button:hover{
+
+    .input-group button:hover {
         background-color: var(--btn-secondary-color);
     }
 }
