--- a/src/frontend/estoque_da_vovo/src/components/Header/Header.css
+++ b/src/frontend/estoque_da_vovo/src/components/Header/Header.css
@@ -22,3 +22,21 @@
 
 }
 
+.area-btn button{
+    position: relative;
+    right: 42px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f0bbc6;
+    border: none;
+    color: white;
+    cursor: pointer;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  }
+  .area-btn button:hover{
+    background-color: #EF88A0;
+  }
+
