--- a/src/frontend/estoque_da_vovo/src/components/Btn/Btn.css
+++ b/src/frontend/estoque_da_vovo/src/components/Btn/Btn.css
@@ -1,6 +1,4 @@
 .button {
-    color: white !important;
-    background-color: var(--btn-background)!important;
     border: solid 1px var(--btn-secondary-color) !important;
     font-weight: 500 !important;
     transition: var(--btn-transition) !important;
@@ -8,6 +6,10 @@
     box-shadow: 0px 0px 5px rgb(0, 0, 0,0.2);
 }
 
-.button:hover{
+.btn-color:hover{
     background-color: var(--btn-secondary-color)!important;
+}
+.btn-color{
+    background-color: var(--btn-background)!important;
+    color: white !important;
 }
